maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:55: error: ':' expected but ')' found.
def isDirectionFree(dir):Boolean = { //Renvoie true si la buggle peut aller dans la direction dir.
                       ^PledgeMaze:71: error: identifier expected but '}' found.
}
^